Make assets relative

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<title>OPEN</title>
 	
-	<link rel="icon" href="../html/assets/img/favicon.ico">
+	<link rel="icon" href="html/assets/img/favicon.ico">
 	
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,13 +21,13 @@
 	<![endif]-->
 	
 	<!-- BEGIN CSS FRAMEWORK -->
-	<link rel="stylesheet" href="../html/assets/plugins/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="html/assets/plugins/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.min.css">
 	<!-- END CSS FRAMEWORK -->
 	
 	<!-- BEGIN CSS PLUGIN -->
-	<link rel="stylesheet" href="../html/assets/plugins/pace/pace-theme-minimal.css">
-	<link rel="stylesheet" href="../html/assets/plugins/jquery-magnific-popup/magnific-popup.css">
+	<link rel="stylesheet" href="html/assets/plugins/pace/pace-theme-minimal.css">
+	<link rel="stylesheet" href="html/assets/plugins/jquery-magnific-popup/magnific-popup.css">
 	<!-- END CSS PLUGIN -->
 	
 	<!-- BEGIN CSS TEMPLATE -->
@@ -216,12 +216,12 @@
 					</div>
 					<div class="col-md-3">
 						<h3>Gallery</h3>
-						<a href="#"><img src="../html/assets/img/gallery/thumb/1.jpg" title="Gallery 1" alt=""></a>
-						<a href="#"><img src="../html/assets/img/gallery/thumb/2.jpg" title="Gallery 2" alt=""></a>
-						<a href="#"><img src="../html/assets/img/gallery/thumb/3.jpg" title="Gallery 3" alt=""></a>
-						<a href="#"><img src="../html/assets/img/gallery/thumb/4.jpg" title="Gallery 4" alt=""></a>
-						<a href="#"><img src="../html/assets/img/gallery/thumb/5.jpg" title="Gallery 5" alt=""></a>
-						<a href="#"><img src="../html/assets/img/gallery/thumb/6.jpg" title="Gallery 6" alt=""></a>
+						<a href="#"><img src="html/assets/img/gallery/thumb/1.jpg" title="Gallery 1" alt=""></a>
+						<a href="#"><img src="html/assets/img/gallery/thumb/2.jpg" title="Gallery 2" alt=""></a>
+						<a href="#"><img src="html/assets/img/gallery/thumb/3.jpg" title="Gallery 3" alt=""></a>
+						<a href="#"><img src="html/assets/img/gallery/thumb/4.jpg" title="Gallery 4" alt=""></a>
+						<a href="#"><img src="html/assets/img/gallery/thumb/5.jpg" title="Gallery 5" alt=""></a>
+						<a href="#"><img src="html/assets/img/gallery/thumb/6.jpg" title="Gallery 6" alt=""></a>
 					</div>
 				</div>
 			</div>
@@ -259,13 +259,13 @@
 	<div class="scroll-to-top"></div>
 
 	<!-- BEGIN JS FRAMEWORK -->
-	<script src="../html/assets/plugins/jquery-2.1.0.min.js"></script>
-	<script src="../html/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+	<script src="html/assets/plugins/jquery-2.1.0.min.js"></script>
+	<script src="html/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 	<!-- END JS FRAMEWORK -->
 	
 	<!-- BEGIN JS PLUGIN -->
-	<script src="../html/assets/plugins/pace/pace.min.js"></script>
-	<script src="../html/assets/plugins/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
+	<script src="html/assets/plugins/pace/pace.min.js"></script>
+	<script src="html/assets/plugins/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
 	<script src="assets/js/jquery.nav.js"></script>
 	<script src="assets/js/isotope.pkgd.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js"></script>
