--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand nav-external" href="#home"><img src="/assets/img/logo-transparent-white-crop.png" alt="" height="40"></a>
+					<a class="navbar-brand nav-external" href="#home"><img src="assets/img/logo-transparent-white-crop.png" alt="" height="40"></a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -56,7 +56,7 @@
 							<a href="/">Home</a>
 						</li>
 						<li>
-							<a href="/about.html">About</a>
+							<a href="about.html">About</a>
 						</li>
 						<li>
 							<a href="#portfolio">Become a Member</a>
@@ -88,24 +88,24 @@
 				</div>
 			</div> -->
 			<div class="row">
-				<div class="col-md-6 background promo double" style="background-image: url(/assets/img/bg1.jpg)">
+				<div class="col-md-6 background promo double" style="background-image: url(assets/img/bg1.jpg)">
 					<h1 class="yellow-bg">THOUGHT: Cape Town's shared workspace to OPEN in January</h1>
 					<p class="yellow-bg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at neque ut nibh euismod ullamcorper. Ut consequat tempor massa ac scelerisque. Donec vel vestibulum sem, sed pellentesque ligula.</p>
 				</div>
 				<div class="col-md-6">
 					<div class="row">
-						<div class="col-md-6 background promo" style="background-image: url(/assets/img/bg9.jpg)">
+						<div class="col-md-6 background promo" style="background-image: url(assets/img/bg9.jpg)">
 							<h3 class="yellow-bg">FEATURED: Mark and Paul</h3>
 						</div>
-						<div class="col-md-6 background promo" style="background-image: url(/assets/img/bg6.jpg)">
+						<div class="col-md-6 background promo" style="background-image: url(assets/img/bg6.jpg)">
 							<h3>LOCATION: Maboneng, Johannesburg</h3>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-6 background promo" style="background-image: url(/assets/img/bg5.jpg)">
+						<div class="col-md-6 background promo" style="background-image: url(assets/img/bg5.jpg)">
 							<h3>THOUGHT: The Way we work has changed, office space needs to change too</h3>
 						</div>
-						<div class="col-md-6 background promo" style="background-image: url(/assets/img/bg4.jpg)">
+						<div class="col-md-6 background promo" style="background-image: url(assets/img/bg4.jpg)">
 							<h3>FEATURED: Code4SA</h3>
 						</div>
 					</div>
