--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active">
-							<a href="/">Home</a>
+							<a href="index.html">Home</a>
 						</li>
 						<li>
 							<a href="about.html">About</a>
