--- a/membership.html
+++ b/membership.html
@@ -10,7 +10,7 @@ layout: default
 			</div>
 			<div class="col-md-12">
 				<p class="lead">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta quod explicabo temporibus ad saepe iste, accusantium neque veniam autem consequatur. Reiciendis veritatis alias consectetur ea omnis, minus maxime autem repellendus!
+					Step into a comfortable, technologically advanced office where people come together to be inspired, share ideas and create new opportunities. OPEN offers made to measure memberships for individuals and companies and even flexible, walk-in day use.
 				</p>
 			</div>
 			<div class="col-md-4">
@@ -27,7 +27,7 @@ layout: default
 		</div>
 		<div class="row">
 			<div class="col-md-4">
-				<ul class="list-group">
+				<ul class="list-group bigger-icons">
 					<li class="list-group-item list-group-item-success">
 						<h4 class="list-group-item-heading">Full Member</h4>
 					</li>
@@ -59,7 +59,7 @@ layout: default
 			</div>
 
 			<div class="col-md-4">
-				<ul class="list-group">
+				<ul class="list-group bigger-icons">
 					<li class="list-group-item list-group-item-success">
 						<h4 class="list-group-item-heading">Light Member</h4>
 					</li>
@@ -91,7 +91,7 @@ layout: default
 			</div>
 			
 			<div class="col-md-4">
-				<ul class="list-group">
+				<ul class="list-group bigger-icons">
 					<li class="list-group-item list-group-item-success">
 						<h4 class="list-group-item-heading">Community Member</h4>
 					</li>
@@ -129,7 +129,7 @@ layout: default
 		</div>
 		<div class="row">
 			<div class="col-md-4">
-				<ul class="list-group">
+				<ul class="list-group bigger-icons">
 					<li class="list-group-item list-group-item-success">
 						<h4 class="list-group-item-heading">Business Complete</h4>
 					</li>
@@ -164,7 +164,7 @@ layout: default
 			</div>
 
 			<div class="col-md-4">
-				<ul class="list-group">
+				<ul class="list-group bigger-icons">
 					<li class="list-group-item list-group-item-success">
 						<h4 class="list-group-item-heading">Business Light</h4>
 					</li>
@@ -207,7 +207,7 @@ layout: default
 
 		<div class="row">
 			<div class="col-md-4">
-				<ul class="list-group">
+				<ul class="list-group bigger-icons">
 					<li class="list-group-item list-group-item-success">
 						<h4 class="list-group-item-heading">One Day Pass</h4>
 					</li>
@@ -222,7 +222,7 @@ layout: default
 			</div>
 
 			<div class="col-md-4">
-				<ul class="list-group">
+				<ul class="list-group bigger-icons">
 					<li class="list-group-item list-group-item-success">
 						<h4 class="list-group-item-heading">20 Day Pass</h4>
 					</li>
