--- a/membership.html
+++ b/membership.html
@@ -131,7 +131,10 @@ layout: default
 			<div class="col-md-4">
 				<ul class="list-group bigger-icons">
 					<li class="list-group-item list-group-item-success">
-						<h4 class="list-group-item-heading">Business Complete</h4>
+						<h4 class="list-group-item-heading">Business Full</h4>
+					</li>
+					<li class="list-group-item" >
+						<i class="fa fa-users"></i> Up to three people
 					</li>
 					<li class="list-group-item" >
 						<i class="fa fa-check-square-o"></i> Your own Business Address
@@ -155,7 +158,7 @@ layout: default
 						An optional Landline for R150 per month extra
 					</li>
 					<li class="list-group-item" >
-						<i class="fa fa-check-square-o"></i> 1,200 per month per extra person
+						<i class="fa fa-check-square-o"></i> <strong>1,200 per month per extra person</strong>
 					</li>
 					<li class="list-group-item list-group-item-warning" >
 						<strong>R3,000 per month</strong>
@@ -167,6 +170,9 @@ layout: default
 				<ul class="list-group bigger-icons">
 					<li class="list-group-item list-group-item-success">
 						<h4 class="list-group-item-heading">Business Light</h4>
+					</li>
+					<li class="list-group-item" >
+						<i class="fa fa-users"></i> Up to two people for a maximum of eight days per month each
 					</li>
 					<li class="list-group-item" >
 						<i class="fa fa-check-square-o"></i> Your own Business Address
