--- a/membership.html
+++ b/membership.html
@@ -41,7 +41,7 @@ layout: default
 						<i class="fa fa-check-square-o"></i> Access to the Boardrooms
 					</li>
 					<li class="list-group-item" >
-						<i class="fa fa-heart-o"></i> <strong>10GB per month</strong> Internet
+						<i class="fa fa-wifi"></i> <strong>10GB per month</strong> Internet
 					</li>
 					<li class="list-group-item" >
 						<i class="fa fa-check-square-o"></i> Free printing on a Fair Use policy
@@ -73,7 +73,7 @@ layout: default
 						20% off Boardroom bookings
 					</li>
 					<li class="list-group-item" >
-						<i class="fa fa-heart-o"></i> <strong>5GB per month</strong> Internet
+						<i class="fa fa-wifi"></i> <strong>5GB per month</strong> Internet
 					</li>
 					<li class="list-group-item" >
 						Pay for printing
@@ -105,7 +105,7 @@ layout: default
 						20% off Boardroom bookings
 					</li>
 					<li class="list-group-item" >
-						<i class="fa fa-heart-o"></i> <strong>R20 per Gigabyte</strong> Internet
+						<i class="fa fa-wifi"></i> <strong>R20 per Gigabyte</strong> Internet
 					</li>
 					<li class="list-group-item" >
 						Pay for printing
@@ -146,7 +146,7 @@ layout: default
 						<i class="fa fa-check-square-o"></i> Access to the Boardrooms
 					</li>
 					<li class="list-group-item" >
-						<i class="fa fa-heart-o"></i> <strong>10 Gigabytes per month</strong> Internet
+						<i class="fa fa-wifi"></i> <strong>10 Gigabytes per month</strong> Internet
 					</li>
 					<li class="list-group-item" >
 						<i class="fa fa-check-square-o"></i> Free printing on a Fair Use policy
@@ -157,8 +157,8 @@ layout: default
 					<li class="list-group-item" >
 						An optional Landline for R150 per month extra
 					</li>
-					<li class="list-group-item" >
-						<i class="fa fa-check-square-o"></i> <strong>1,200 per month per extra person</strong>
+					<li class="list-group-item list-group-item-danger" >
+						<i class="fa fa-check-square-o"></i> R1,200 per month per extra person
 					</li>
 					<li class="list-group-item list-group-item-warning" >
 						<strong>R3,000 per month</strong>
@@ -184,7 +184,7 @@ layout: default
 						20% off Boardroom bookings
 					</li>
 					<li class="list-group-item" >
-						<i class="fa fa-heart-o"></i> <strong>Five Gigabytes per month</strong> Internet
+						<i class="fa fa-wifi"></i> <strong>Five Gigabytes per month</strong> Internet
 					</li>
 					<li class="list-group-item" >
 						Pay for printing
@@ -195,7 +195,7 @@ layout: default
 					<li class="list-group-item" >
 						An optional Landline for R150 per month extra
 					</li>
-					<li class="list-group-item" >
+					<li class="list-group-item list-group-item-danger" >
 						<i class="fa fa-check-square-o"></i> R500 per month per extra person
 					</li>
 					<li class="list-group-item list-group-item-warning" >
@@ -218,7 +218,7 @@ layout: default
 						<h4 class="list-group-item-heading">One Day Pass</h4>
 					</li>
 					<li class="list-group-item" >
-						<i class="fa fa-heart-o"></i> <strong>Two Gigabytes</strong> Internet
+						<i class="fa fa-wifi"></i> <strong>Two Gigabytes</strong> Internet
 					</li>
 					
 					<li class="list-group-item list-group-item-warning" >
@@ -233,7 +233,7 @@ layout: default
 						<h4 class="list-group-item-heading">20 Day Pass</h4>
 					</li>
 					<li class="list-group-item" >
-						<i class="fa fa-heart-o"></i> <strong>50 Gigabytes</strong> Internet
+						<i class="fa fa-wifi"></i> <strong>50 Gigabytes</strong> Internet
 					</li>
 					
 					<li class="list-group-item list-group-item-warning" >
