Make description smaller

--- a/membership.html
+++ b/membership.html
@@ -172,7 +172,7 @@ layout: default
 						<h4 class="list-group-item-heading">Business Light</h4>
 					</li>
 					<li class="list-group-item" >
-						<i class="fa fa-users"></i> Up to two people for a maximum of eight days per month each
+						<i class="fa fa-users"></i> Two people for eight days per month each
 					</li>
 					<li class="list-group-item" >
 						<i class="fa fa-check-square-o"></i> Your own Business Address
