--- a/workshop17.html
+++ b/workshop17.html
@@ -22,14 +22,17 @@ layout: default
 			<div class="item" style="background-image: url({{ "/assets/img/workshop17/workshop17-4.jpg"  | prepend: site.baseurl }})"></div>
 			<div class="item" style="background-image: url({{ "/assets/img/workshop17/workshop17-5.jpg"  | prepend: site.baseurl }})"></div>
 		</div>
+		<!-- Controls -->
+  <a class="left carousel-control" href="#location-carousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#location-carousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 	</div>
 </section>
-
-<script>
-	$('.carousel').carousel({
-		interval: 2000
-	});
-</script>
 
 <section id="about" class="page">
 	<div class="container">
