--- a/workshop17.html
+++ b/workshop17.html
@@ -6,11 +6,9 @@ layout: default
 	<div id="location-carousel" class="carousel slide" data-ride="carousel">
 	<!-- Indicators -->
 		<div class="container">
-			<div class="badass carousel-header">
-				<h1>
-					<p>OPEN at Workshop17<br> 
-					V&amp;A Waterfront<br>
-					Cape Town</p>
+			<div class="charcoal-transparent-bg carousel-header">
+				<h1 class="smaller">
+					Workshop17, V&amp;A Waterfront, Cape Town
 				</h1>
 			</div>
 		</div>
