Fix wesleighs email

--- a/maboneng.html
+++ b/maboneng.html
@@ -69,7 +69,7 @@ layout: default
 					<a href="mailto:jessica@openworkspaces.co.za">jessica@openworkspaces.co.za</a><br>
 					<a href="tel:+27109002000">+27-(0)10-900-2000</a><br>
 					<strong>Wesleigh</strong><br>
-					<a href="mailto:esleigh@theopen.co.za">wesleigh@theopen.co.za</a>
+					<a href="mailto:wesleigh@theopen.co.za">wesleigh@theopen.co.za</a>
 				</p>
 				
 			</div>
