Amenities and about

--- a/maboneng.html
+++ b/maboneng.html
@@ -37,14 +37,19 @@ layout: default
 		<div class="row">
 			<div class="col-md-6">
 				<h2>About Maboneng</h2>
-				<p>...</p>
+				<p>In the heart of Maboneng, OPEN offers an inspiring, creative and unique environment to work, host meetings, conferences and events. We applied new technologies to create the best conditions possible. It boasts the fastest internet available in the CBD.</p>
+
+				<p>The Maboneng Precinct has become a popular destination for those looking to connect with the urban edge and vibrant energy of the Johannesburg City Centre. This unique setting has created a strong entrepreneurial community, filled with boutique restaurants and fashion houses.</p>
 			</div>
 			<div class="col-md-6">
 				<h2>Amenities</h2>
 				<ul>
-					<li>...</li>
-					<li>...</li>
-					<li>...</li>
+					<li>A large co-working area, with hot desks, dedicated desks and dedicated work areas for teams.</li>
+					<li>Three fully equipped meeting rooms for meetings, teaching, presentations, catering for groups from two to 40 participants.</li>
+					<li>A creative space for idea generation and creative sessions.</li>
+					<li>A central meeting area for plenary sessions for up to 120 participants, that doubles as a 9 hole putting course.</li>
+					<li>A coffee, tea and refreshment bar and lounge.</li>
+					<li>An outside deck for catching some fresh air while having a drink, meal or informal discussion.</li>
 				</ul>
 			</div>
 		</div>
