--- a/wits.html
+++ b/wits.html
@@ -36,7 +36,12 @@ layout: default
 		<div class="row">
 			<div class="col-md-12">
 				<h2>About OPEN At Wits</h2>
-				<p class="lead">Braamfontein, the scene of much urban renewal in recent times, is now the site of an exciting new-age software skills and innovation hub, the Tshimologong Precinct. The Precinct is part of an ambitious ICT cluster development programme, Tech-in-Braam, that has swung into action and is making the once dilapidated suburb the new technical heart of South Africa and beyond.</p>
+				<div class="lead">
+					<p>OPEN at Wits provides an ecosystem for digital technology and innovation.</p>
+					<p>OPEN at Wits is located in the new Tshimologong Precinct, initiated by the Johannesburg Centre for Software Engineering of Wits University. It is situated two blocks south of Senate House, and in the middle of Braamfontein.</p>
+					<p>Tshimologong will bring together local and international, young and experienced professionals, academics, corporates to play an active role in facilitating an environment that fosters innovation and entrepreneurship.</p>
+					<p>OPEN at Wits is perfectly located to help develop and grow the confluence between software, hardware and content.</p>
+				</div>
 			</div>
 			
 		</div>
