--- a/events.html
+++ b/events.html
@@ -36,7 +36,9 @@ layout: default
 
 			<div class="col-md-6">
 				<h2>Launches</h2>
-				<img style="height: 226px; overflow: hidden;" src="{{ "/assets/img/events/launch-1.jpg" | prepend: site.baseurl }}" alt="Conferencing">
+				<div style="height: 226px; overflow: hidden;">
+					<img  src="{{ "/assets/img/events/launch-1.jpg" | prepend: site.baseurl }}" alt="Conferencing">
+				</div>
 			</div>
 		</div>
 	</div>
