Update front page

--- a/index.html
+++ b/index.html
@@ -11,25 +11,26 @@ layout: default
 				</div>
 			</div> -->
 			<div class="row">
-				<div class="col-md-6 background promo double" style="background-image: url(assets/img/bg1.jpg)">
-					<h1 class="yellow-bg">THOUGHT: Cape Town's shared workspace to OPEN in January</h1>
-					<p class="yellow-bg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at neque ut nibh euismod ullamcorper. Ut consequat tempor massa ac scelerisque. Donec vel vestibulum sem, sed pellentesque ligula.</p>
+
+				<div class="col-md-6 background promo double" style="background-image: url(assets/img/workshop17/workshop17-5.jpg)">
+					<a href="{{ "/workshop17.html" | prepend: site.baseurl }}"><h1 class="yellow-bg">Cape Town's shared workspace to OPEN in January</h1></a>
+					<!-- <p class="yellow-bg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at neque ut nibh euismod ullamcorper. Ut consequat tempor massa ac scelerisque. Donec vel vestibulum sem, sed pellentesque ligula.</p> -->
 				</div>
 				<div class="col-md-6">
 					<div class="row">
-						<div class="col-md-6 background promo" style="background-image: url(assets/img/bg9.jpg)">
-							<h3 class="yellow-bg">FEATURED: Mark and Paul</h3>
+						<div class="col-md-6 background promo" style="background-image: url(assets/img/community/vasili_kourelos.png)">
+							<a href="community.html"><h3 class="yellow-bg">FEATURED: Vasili Kourelos</h3></a>
 						</div>
 						<div class="col-md-6 background promo" style="background-image: url(assets/img/bg6.jpg)">
-							<h3>LOCATION: Maboneng, Johannesburg</h3>
+							<a href="#book-a-tour"><h3>Book a tour</h3></a>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-6 background promo" style="background-image: url(assets/img/bg5.jpg)">
-							<h3>THOUGHT: The Way we work has changed, office space needs to change too</h3>
+						<div class="col-md-6 background promo" style="background-image: url(assets/img/bg3.jpg)">
+							<a href="membership.html"><h3>Become a member</h3></a>
 						</div>
-						<div class="col-md-6 background promo" style="background-image: url(assets/img/bg4.jpg)">
-							<h3>FEATURED: Code4SA</h3>
+						<div class="col-md-6 background promo" style="background-image: url(assets/img/wits/wits-1.jpg)">
+							<a href="wits.html"><h3>OPEN At Wits</h3></a>
 						</div>
 					</div>
 				</div>
@@ -43,20 +44,20 @@ layout: default
 			<div class="content text-center">
 				<div class="heading">
 					<h2><i class="fa fa-map-marker"></i>Locations</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<h3><a href="#">Maboneng, Johannesburg</a></h3>
-						<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+						<h3><a href="maboneng.html">OPEN, Maboneng, Johannesburg</a></h3>
+						<p>In the heart of Maboneng, OPEN offers an inspiring, creative and unique environment to work, host meetings, conferences and events. We applied new technologies to create the best conditions possible. It boasts the fastest internet available in the CBD.</p>
 					</div>
 					<div class="col-md-4">
-						<h3><a href="#">Waterfront, Cape Town</a></h3>
-						<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+						<h3><a href="workshop17.html">Workshop17, Waterfront, Cape Town</a></h3>
+						<p>The Waterfront is the number one destination in Africa, with about 24 million visitors each year. Workshop17 is adding a new element to the Waterfront ecosystem of retail, residential, hospitality, entertainment, and food.</p>
 					</div>
 					<div class="col-md-4">
-						<h3><a href="#">Braamfontein, Johannesburg</a></h3>
-						<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+						<h3><a href="wits.html">OPEN at Wits, Braamfontein, Johannesburg</a></h3>
+						<p>OPEN at Wits is located in the new Tshimologong Precinct, initiated by the Johannesburg Centre for Software Engineering of Wits University. It is situated two blocks south of Senate House, and in the middle of Braamfontein.</p>
 					</div>
 				</div>
 			</div>
@@ -69,7 +70,7 @@ layout: default
 	
 	
 	<!-- BEGIN CONTACT -->
-	<section id="portfolio" class="page">
+	<!-- <section id="portfolio" class="page">
 		<div class="container">
 			<div class="content text-center">
 				<div class="heading">
@@ -107,8 +108,35 @@ layout: default
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- END CONTACT -->
+	<div class="container" id="book-a-tour">
+		<div class="row">
+			<div class="col-md-12">
+				<h2>Book a tour</h2>
+				<div id="wufoo-rdd31wm0n38hhq">
+Fill out my <a href="https://theopen.wufoo.com/forms/rdd31wm0n38hhq">online form</a>.
+</div>
+<script type="text/javascript">var rdd31wm0n38hhq;(function(d, t) {
+var s = d.createElement(t), options = {
+'userName':'theopen',
+'formHash':'rdd31wm0n38hhq',
+'autoResize':true,
+'height':'957',
+'async':true,
+'host':'wufoo.com',
+'header':'show',
+'ssl':true};
+s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+s.onload = s.onreadystatechange = function() {
+var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+try { rdd31wm0n38hhq = new WufooForm();rdd31wm0n38hhq.initialize(options);rdd31wm0n38hhq.display(); } catch (e) {}};
+var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+})(document, 'script');</script>
+			</div>
+		</div>
+	</div>
+	
 	
 
 </body>
