Change some fp stuff

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@ layout: default
 			<div class="row">
 
 				<div class="col-md-6 background promo double" style="background-image: url(assets/img/workshop17/workshop17-5.jpg)">
-					<a href="{{ "/workshop17.html" | prepend: site.baseurl }}"><h1 class="yellow-bg">Cape Town's shared workspace to OPEN in January</h1></a>
-					<!-- <p class="yellow-bg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at neque ut nibh euismod ullamcorper. Ut consequat tempor massa ac scelerisque. Donec vel vestibulum sem, sed pellentesque ligula.</p> -->
+					<a href="{{ "/workshop17.html" | prepend: site.baseurl }}"><h1 class="charcoal-bg">Cape Town's shared workspace to OPEN in April</h1></a>
+					<!-- <p class="charcoal-bg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at neque ut nibh euismod ullamcorper. Ut consequat tempor massa ac scelerisque. Donec vel vestibulum sem, sed pellentesque ligula.</p> -->
 				</div>
 				<div class="col-md-6">
 					<div class="row">
-						<div class="col-md-6 background promo" style="background-image: url(assets/img/community/vasili_kourelos.png)">
-							<a href="community.html"><h3 class="yellow-bg">FEATURED: Vasili Kourelos</h3></a>
+						<div class="col-md-6 background promo" style="background-image: url(assets/img/events/launch-1.jpg)">
+							<a href="events.html"><h3 class="charcoal-bg">Book us for an event</h3></a>
 						</div>
 						<div class="col-md-6 background promo" style="background-image: url(assets/img/bg6.jpg)">
 							<a href="#book-a-tour"><h3>Book a tour</h3></a>
