--- a/workshop17.html
+++ b/workshop17.html
@@ -71,7 +71,7 @@ layout: default
 
 				<p><strong>Team:</strong><br>
 				Yehuda <a href="mailto:yehuda@openworkspaces.co.za">yehuda@openworkspaces.co.za</a><br>
-				Paul <a href="mailto:paul@openworkspaces.co.za">nsovo@openworkspaces.co.za</a><br>
+				Paul <a href="mailto:paul@openworkspaces.co.za">paul@openworkspaces.co.za</a><br>
 				Tina<br></p>
 			</div>
 			<div class="col-md-6">
