--- a/workshop17.html
+++ b/workshop17.html
@@ -70,8 +70,8 @@ layout: default
 				<a href="mailto:workshop17@openworkspaces.co.za">workshop17@openworkspaces.co.za</a></p>
 
 				<p><strong>Team:</strong><br>
-				Yehuda <a href="mailto:yehuda@open.co.za">yehuda@open.co.za</a><br>
-				Nsovo <a href="mailto:nsovo@open.co.za">nsovo@open.co.za</a><br>
+				Yehuda <a href="mailto:yehuda@openworkspaces.co.za">yehuda@open.co.za</a><br>
+				Nsovo <a href="mailto:paul@openworkspaces.co.za">paul@openworkspaces.co.za</a><br>
 				Tina<br></p>
 			</div>
 			<div class="col-md-6">
