--- a/membership.html
+++ b/membership.html
@@ -1,6 +1,8 @@
 ---
 layout: default
+published: true
 ---
+
 
 <section id="news" class="first page">
 	<div class="container">
@@ -10,7 +12,7 @@ layout: default
 			</div>
 			<div class="col-md-12">
 				<p class="lead">
-					Step into a comfortable, technologically advanced office where people come together to be inspired, share ideas and create new opportunities. OPEN offers made to measure memberships for individuals and companies and even flexible, walk-in day use.
+					Step a comfortable, technologically advanced offices where people come together to be inspired, share ideas and create new opportunities. OPEN offers made to measure memberships for individuals and companies and even flexible, walk-in day use.
 				</p>
 			</div>
 			<div class="col-md-4">
