--- a/membership.html
+++ b/membership.html
@@ -12,7 +12,7 @@ published: true
 			</div>
 			<div class="col-md-12">
 				<p class="lead">
-					Step a comfortable, technologically advanced offices where people come together to be inspired, share ideas and create new opportunities. OPEN offers made to measure memberships for individuals and companies and even flexible, walk-in day use.
+					Step into comfortable, technologically advanced offices where people come together to be inspired, share ideas and create new opportunities. OPEN offers made to measure memberships for individuals and companies and even flexible, walk-in day use.
 				</p>
 			</div>
 			<div class="col-md-4">
